--- a/github/workflows/test.yaml
+++ b/github/workflows/test.yaml
@@ -4,7 +4,7 @@ on: workflow_dispatch
 
 jobs:
   test:
-    # где заускаем
+    # где запускаем
     runs-on: ubuntu-latest
     # что делаем
     steps:
@@ -14,7 +14,7 @@ jobs:
       - uses: actions/setup-java@v3
         with:
           distribution: 'zulu'
-          java-version: '22'
+          java-version: '17'
       - uses: Xotabu4/selenoid-github-action@v2
       # запускаем тесты
       - run: ./gradlew clean test -Dselenide.remote=http://localhost:4444/wd/hub
